# w3c-command-line-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/w3c_validator/: cli.py
src/w3c_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
