# Define metadata
[project]
name = "w3c-validator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests"]

# Create real executable
[project.scripts]
w3c-validator = "w3c_validator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
